2009-12-09  John W. Eaton  <jwe@octave.org>

	* gl2ps-renderer.cc (draw_pixels): New template function.
	(opengl_renderer::draw_pixels): Use it.

2009-12-09  Shai Ayal  <shaiay@users.sourceforge.net>

	* gl2ps.c, gl2ps.h: Use upstream version gl2ps-1.3.5-svn-20091202.

	* gl-render.cc (opengl_renderer::draw_pixels): New function.
	(opengl_renderer::draw_image): Correctly handle images with width
	or height of 1.  Use draw_pixels.
	* gl-render.h (opengl_renderer::draw_pixels): Provide decl.

	* gl2ps-renderer.cc (glps_renderer::draw_pixels): New function.
	* gl2ps-renderer.h (glps_renderer::draw_pixels): Provide decl.

2009-12-09  John W. Eaton  <jwe@octave.org>

	* load-save.cc: Call nstrftime instead of my_strftime.

2009-12-09  John W. Eaton  <jwe@octave.org>

	* load-save.cc: Include strftime.h.
	(write_header): Call my_strftime instead of strftime.

	* Makefile.am (AM_CPPFLAGS): Add -I$(top_srcdir)/libgnu to the list.
	(OCTAVE_LIBS, OCTINTERP_LINK_DEPS, OCT_LINK_DEPS):
	Add ../libgnu/libgnu.la to the list.

2009-12-09  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Distribute DOCSTRINGS in tar.gz file

2009-12-07  Jaroslav Hajek  <highegg@gmail.com>

	* dirfns.cc (Ffnmatch): Simplify.

2009-12-08  Michael Goffioul  <michael.goffioul@gmail.com>

	* ov-ch-mat.cc: Add missing #include.
	* oct-stream.cc (do_read): Simplify.
	* gl-render.h: Undef min and max after #including windows.h.

2009-12-08  John W. Eaton  <jwe@octave.org>

	* Makefile.am (gendoc.cc): Don't pass $(srcdidr) to mkgendoc.

2009-12-07  John W. Eaton  <jwe@octave.org>

	* OPERATORS/op-b-b.cc, OPERATORS/op-b-bm.cc,
	OPERATORS/op-b-sbm.cc, OPERATORS/op-bm-b.cc,
	OPERATORS/op-bm-bm.cc, OPERATORS/op-bm-sbm.cc,
	OPERATORS/op-cdm-cdm.cc, OPERATORS/op-cdm-cm.cc,
	OPERATORS/op-cdm-cs.cc, OPERATORS/op-cdm-dm.cc,
	OPERATORS/op-cdm-m.cc, OPERATORS/op-cdm-s.cc,
	OPERATORS/op-cell.cc, OPERATORS/op-chm.cc,
	OPERATORS/op-class.cc, OPERATORS/op-cm-cdm.cc,
	OPERATORS/op-cm-cm.cc, OPERATORS/op-cm-cs.cc,